--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "canvas": "^3.1.0",
+    "firebase": "^11.2.0",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
